# ai_security_prj1

./: .gitignore  DOCUMENTATION.md  MANUAL_TEST_GUIDE.md  all_reqs.txt  apply_policies.py  build_and_push.ps1  build_and_push.sh  build_push_deploy.md  demo_test_results.md  deploy_guide.md  graph_admin.html  qa_guide_test_results.md  set_env_vars.ps1  start_all.ps1  start_all.sh  stop_all.ps1  stop_all.sh
front-end/: .gitignore  (+5 more)
l2-knowledge-graph-v3/: .env.example  Dockerfile  README.md  audit_results.json  docker-compose.yml  pyproject.toml  structural_audit.py  test_neo4j_props.py  wipe_neo4j.py
l2-knowledge-graph-v3/app/: api_audit.py  auth.py  config.py  dependencies.py  main.py  rate_limit.py
l2-knowledge-graph-v3/config/: domain_rules.json
l2-knowledge-graph-v3/cypher/: 001_constraints_indexes.cypher  002_seed_data.cypher  003_apollohr_seed.cypher  004_apollohis_seed.cypher  005_analytics_seed.cypher  006_financial_seed.cypher  007_tsdb_audit_seed.cypher  008_section5_compliance_patch.cypher  009_policy_regulation_push.cypher  010_policy_relationships.cypher  010_relationship_fix.cypher  011_section6_relationship_fix.cypher  011_spec_policy_alignment.cypher  101_apollo_analytics_live_seed.cypher  102_apollo_financial_live_seed.cypher  103_apollohr_live_seed.cypher  104_apollohis_live_seed.cypher  105_tsdb_live_seed.cypher
l2-knowledge-graph-v3/docs/: api_examples.md
l2-knowledge-graph-v3/migrations/: 001_audit_tables.sql
l2-knowledge-graph-v3/scripts/: init_graph.py  live_crawl.py  run_crawl.py
l2-knowledge-graph-v3/seed_data/: apollo_hospitals.py
(+291 files in other folders)
