[project]
name = "l2-knowledge-graph"
version = "1.0.0"
description = "Layer 2 — Knowledge Graph Layer for Zero Trust NL-to-SQL Pipeline"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "neo4j>=5.17.0",
    "asyncpg>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.25",
    "pgvector>=0.2.5",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "redis>=5.0.0",
    "httpx>=0.27.0",
    "hvac>=2.1.0",
    "python-jose[cryptography]>=3.3.0",
    "structlog>=24.1.0",
    "tenacity>=8.2.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
crawlers = [
    "aioodbc>=0.5.0",
    "cx_Oracle>=8.3.0",
    "motor>=3.3.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.27.0",
    "respx>=0.21.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true
